--- a/src/views/RegisterView/RegisterView.module.css
+++ b/src/views/RegisterView/RegisterView.module.css
@@ -1,5 +1,6 @@
 .form {
   width: 320px;
+  color: midnightblue;
 }
 
 .label {
@@ -8,7 +9,43 @@
   margin-bottom: 15px;
 }
 
+.input {
+  margin-bottom: 20px;
+  padding: 6px;
+  border: 1px solid midnightblue;
+  border-radius: 5%;
+  transform: border-color 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+
+.input:hover {
+  border-color: cornflowerblue;
+}
+
 .container {
   display: flex;
   justify-content: center;
+}
+
+.btnSubmit {
+  width: 180px;
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 8px;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 5%;
+
+  background-color: cornflowerblue;
+  color: white;
+
+  transition: background-color 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67),
+    color 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67),
+    transform 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+
+.btnSubmit:hover {
+  border: 1px solid cornflowerblue;
+  background-color: white;
+  color: cornflowerblue;
+  transform: scale(1.1);
 }
